<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Active Protective</string>

    <!--Common Welcome-->
    <string name="scan_to_pair">Scan to Pair</string>
    <string name="admin_login">Admin Login</string>
    <string name="sign_up">Sign Up</string>

    <!--Admin Login-->
    <string name="email_user_id">Email/User ID</string>
    <string name="enter_email_user_id">Enter Email/User ID </string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="user_login">User Login</string>

    <string name="plz_enter_email_user_id">Please Enter Email/User ID </string>
    <string name="plz_enter_password">Please Enter Password</string>

    <!--Admin Welcome-->
    <string name="hello_admin_welcome">Hello, Admin!\n&amp; Welcome</string>

    <!--Belt List-->
    <string name="belt_list">Belt List</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="no_belt_added">no belt added, scan to add belt</string>
    <string name="scan_qr_code_start">Scan QR Code to Start</string>
    <string name="belt_user_list">BeltList/UserList </string>
    <string name="status">Status</string>
    <string name="wifi_configured">Wifi Configured</string>
    <string name="not_configured">Not Configured</string>
    <string name="delete_msg">Are you sure you want to Delete?</string>

    <!--QR Scanner-->
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="add_manually">Add Manually</string>
    <string name="close">Close</string>

    <!--Belt Details-->
    <string name="belt_details">Belt Details</string>
    <string name="configure">Configure</string>
    <string name="reconfigure">Reconfigure</string>
    <string name="enter_size">Enter Size</string>
    <string name="assign">Assign</string>
    <string name="assigned_user">Assigned User</string>
    <string name="enter_assigned_user">Enter Assigned User</string>
    <string name="un_assign">UnAssign</string>

    <string name="plz_enter_size">Please Enter Size</string>
    <string name="plz_enter_assigned_user">Please Enter Assigned User</string>
    <string name="un_assign_msg">Are you sure want to unassign the BELT %1$s with the USER %2$s?</string>


    <!--Add Belt-->
    <string name="add_belt">Add Belt</string>
    <string name="serial_number">Serial Number</string>
    <string name="enter_serial_number">Enter Serial Number</string>
    <string name="mac_address">MAC Address</string>
    <string name="enter_mac_address">Enter MAC Address</string>
    <string name="ssid">SSID</string>
    <string name="enter_ssid">Enter SSID</string>
    <string name="size">Size</string>
    <string name="model">Model</string>
    <string name="enter_model">Enter Model</string>
    <string name="xs">XS</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="save">Save</string>

    <string name="plz_enter_serial_number">Please Enter Serial Number</string>
    <string name="plz_enter_mac_address">Please Enter MAC Address</string>
    <string name="plz_enter_ssid">Please Enter SSID</string>
    <string name="plz_enter_model">Please Enter Model</string>

    <!--Assign User List-->
    <string name="assign_user">Assign User</string>
    <string name="add_user">Add User</string>

    <!--Add User-->
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="address">Address</string>
    <string name="enter_address_line_one">Enter Address Line 1</string>
    <string name="enter_address_line_two">Enter Address Line 2</string>
    <string name="zip_code">Zip Code</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="country_code">Country Code</string>
    <string name="enter_country_code">Enter Country Code</string>
    <string name="primary_mobile_number">Primary Mobile Number</string>
    <string name="enter_primary_mobile_number">Enter Primary Mobile Number</string>
    <string name="secondary_mobile_number">Secondary Mobile Number</string>
    <string name="enter_secondary_mobile_number">Enter Secondary Mobile Number</string>
    <string name="primary_email">Primary Email</string>
    <string name="enter_primary_email">Enter Primary Email</string>
    <string name="star_sym">*</string>


    <string name="plz_enter_title">Please Enter Title</string>
    <string name="plz_enter_first_name">Please Enter First Name</string>
    <string name="plz_enter_address">Please Enter Address</string>
    <string name="plz_enter_zip">Please Enter Zip Code</string>
    <string name="plz_enter_country_code">Please Enter Country Code</string>
    <string name="plz_enter_primary_mobile_number">Please Enter Primary Mobile Number</string>
    <string name="plz_enter_primary_email">Please Enter Primary Email</string>
    <string name="plz_enter__valid_primary_email">Please Enter Valid Primary Email</string>


    <string name="assign_msg">Are you sure want to Assign the BELT with the USER %1$s</string>

    <!--Introduction-->
    <string name="introduction">Introduction</string>
    <string name="configuration_msg">Please make sure belt is connected to charger and press the white button.\nYou should see a flashing blue light on the belt,
    before you proceed to configure the belt to Wifi.</string>

    <!--Connect to belt-->
    <string name="connect_to_belt">Connect to Belt</string>
    <string name="connect_to_belt_dot">Connect to Belt&#8230;</string>
    <string name="cancel">Cancel</string>

    <!--AdminDashboard-->
    <string name="dashboard">Dashboard</string>

    <!--Web URL-->
    <string name="belt_settings">Belt Settings</string>
    <string name="alert_settings">Alert Settings</string>

    <!--General-->
    <string name="go_settings_per">You have denied the app permissions. Go to Settings and Enable the Permissions.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_internet"> Please Verify Your Internet Connection.</string>
    <string name="connect_time_out">Could not connect to Active Protective App Server. Please try again.</string>
    <string name="retry">Retry</string>
    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="logged_in_success">Logged In Successfully</string>
    <string name="logout_msg">Are you sure you want to Logout?</string>
    <string name="exit_msg">Press again to exit</string>

    <!--Temp-->
    <string name="settings">Settings</string>
    <string name="alert">Alert</string>
    <string name="misc_future_use">Misc page to be used in future</string>

</resources>
